# vakya-vallari

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
book/: metadata.yaml
book/src/: 00-how-to-read.md  000-copyright.md  00a-preface.md  01-note-on-sanskrit.md  99-about-the-author.md  app-a-running-the-proofs.md  app-b-reading-sanskrit.md  app-c-glossary.md  app-e-further-reading.md  ch-01-the-verse.md  ch-02-library-without-paper.md  ch-03-paninis-machine.md  ch-04-grammar-to-metaphysics.md  ch-05-what-is-a-proof.md  ch-06-propositions-as-types.md  ch-07-lean-in-an-afternoon.md  ch-08-type-theory-india-had.md  ch-09-commentary-as-specification.md  ch-10-contract-of-1-1.md  ch-11-machines-that-draft.md  ch-12-one-word-many-sorts.md  ch-23-what-is-not-proved.md  ch-24-sanskrit-tuned-prover.md  ch-25-an-invitation.md  part-1.md  part-2.md  part-3.md  part-4.md  part-5.md
book/style/: epub.css  print.tex
data/contracts/: 1.1.json  1.10.json  1.100.json  1.101.json  1.102.json  1.103.json  1.104.json  1.105.json  1.106.json  (+135 more)
docs/: Lean Prover and Sanskrit Verification.txt  book-review-2026-07-19.md
lean/: README.md  VakyaVallari.lean  lake-manifest.json  lakefile.toml  test_relation_symmetry.lean
paper/: paper.tex  refs.bib
research/: book_ledger.jsonl  journal.md  ledger.jsonl
scripts/: build_book.py  make_figures.py  publish.py  semantic_audit.py
tests/: test_book.py  test_consistency.py  test_contracts.py  test_corpus.py  test_corpus_writer.py  test_leangen.py  test_ledger.py  test_site.py  test_stance_and_hygiene.py
web/: index.html
(+188 files in other folders)
