[project]
name = "vallari"
version = "0.1.0"
description = "Vākya-Vallarī: the verified Vākyapadīya — canonical corpus, semantic contracts, and Lean 4 translation-adequacy kernel"
requires-python = ">=3.12"
dependencies = [
    "indic-transliteration>=2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "jsonschema>=4.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vallari"]

[tool.pytest.ini_options]
testpaths = ["tests"]
